# aether

./: .cloud-db-password.txt  .dockerignore  .env  .env.cloudrun  .env.docker  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  Dockerfile  GEMINI.md  Makefile  MasteryLevel.md  README.md  ROADMAP.md  TOKEN_REFRESH_IMPLEMENTATION.md  UV_MIGRATION.md  aether_db_backup_20251124_122902.sql  aether_db_backup_20251124_122914.sql  app_logic.py  check_db_conn.py  check_db_connection.py  cloudbuild.yaml  db_schema.sql  dock-compose.yml  docker-compose.test.yml  docker-compose.yml  env.yaml  environment.yml  main.py  manifest.json  package-lock.json  pyproject.toml  requirements.txt  roadmap.md  test.db  test.ipynb  test.py
.claude/: settings.local.json
.github/workflows/: build.yml  lint.yml  pytest.yml  test.yml
Resource/: grade11_chemistry_merged.md  has_prerequisites.csv  has_subtopic.csv  mcq.csv  node.csv
Resource/distilled_markdowns/: chapter1.md  chapter2.md  chapter3.md  chapter4.md  chapter5.md
Resource/knowledgeBase/: import_knowledge_graph.py
Resource/problemSets/: create_multiple_choice_problem.py  import_problem.py
Resource/split_markdowns/: chapter1.md  chapter2.md  chapter3.md  chapter4.md  chapter5.md
app/: config.py  create_course.py  database.py  main.py  models.py  schemas.py  security.py  student.json
app/core/: config.py  database.py  deps.py  prompts.py  security.py
app/crud/: crud.py  enrollment.py  graph_structure.py  knowledge_graph.py  knowledge_node.py  mastery.py  neo4j_query.py  prerequisite.py  question.py  user.py
app/domain/: graph_topology_logic.py  mastery_logic.py  question_rec_logic.py
app/helper/: bayesian_knowledge.py  course_helper.py
app/mcp/: __init__.py  __main__.py  config.py  resources.py  server.py  tools.py
app/models/: __init__.py  course.py  enrollment.py  knowledge_graph.py  knowledge_node.py  neo4j_model.py  question.py  quiz.py  user.py
app/routes/: admin.py  answer.py  courses.py  enrollment.py  knowledge_graph.py  knowledge_node.py  my_graphs.py  public_graph.py  question.py  quiz.py  submissions.py  user.py  utils.py
app/schemas/: __init__.py  courses.py  enrollment.py  file_pipeline.py  graph_generation.py  knowledge_graph.py  knowledge_node.py  questions.py  quiz.py  token.py  user.py
app/services/: email.py  enrollment.py  generate_graph.py  generate_questions.py  grade_answer.py  graph_content.py  graph_generation_service.py  graph_validation_service.py  mastery.py  mastery_calc_prop.py  pdf_pipeline.py  question_rec.py  send_email.py
app/utils/: bkt_calculator.py  grading_logic.py  is_handwritten.py  pdf_metadata.py  question_rec_logic.py  slug.py  split_pdf.py  split_text.py  storage.py  (+1 more)
backend/: Dockerfile  requirements.txt
database/: Experimental.ipynb  create_problem.py  displacement.json  force_prob.json  import_script.py  mastery_level.ipynb  position.json  test_neo4j.py  test_problem.json  vector.json
docs/: Google.md  architecture.md  etl_data_pipeline.md  fsrs_logic_design.md  knowledge_graph.md  mastery_level_propagation.md  question_recommendation.md  roadmap.md
example_data/: nodes.csv  questions.csv  relationships.csv
notebook/: test.json
scripts/: backup-local-database.sh  build-and-push.sh  check_old_chem_questions.py  cleanup_all_neo4j.py  cleanup_demo_data.py  cleanup_demo_data_local.py  cleanup_dev_course.py  cloud-build.sh  deploy-cloud-run-test.sh  deploy-cloud-run.sh  deploy-to-cloud-run.sh  export_graph.py  generate_all_mcq_questions.py  generate_questions_for_graph.py  generate_questions_only.py  import_pdf_to_graph.py  migrate-database-to-cloud.sh  rebuild_grade11_chem.py  reset_user_mastery.py  setup_demo_data.py  setup_demo_data_local.py  setup_demo_data_simple.py  setup_dev_course.py  setup_dev_data_pg.py  test_db_connection.py  test_db_write.py  test_gemini3.py  test_question_generation.py  verify_questions.py
supabase/: config.toml
tests/: conftest.py  test.db  test_admin.py  test_auth.py  test_bulk_import.py  test_course.py  test_deps.py  test_enroll_course.py  test_enrollment.py  test_get_question.py  test_grade_answer_service.py  test_grading_handlers.py  test_knowledge_graph_routes.py  test_knowledge_node_routes.py  test_mastery_service.py  test_neo4j_knowledge_node_fetch.py  test_node.py  test_pydantic_to_neo.py  test_question_rec.py  test_questions.py  test_quiz.py  test_real_bulk_import.py  test_registration.py  test_registration_success.py  test_session.py  test_submissions.py  test_token_refresh.py  test_user.py  test_worker.py  v.py
useless/: app_logic.py  config.py  db_schema.sql  matter.json  student_logic.py  student_table.py  student_table.sql  test.py
(+329 files in other folders)
